--- a/ct.yaml
+++ b/ct.yaml
@@ -72,16 +72,17 @@ metadata:
       start: '2020-09-01'
       end: '2021-08-31'
 computations:
+- accounts:
+  - Income
+  description: Consultancy
+  id: consultancy
+  kind: line
+  period: in-year
 - description: Turnover / revenue
   id: turnover
   kind: group
-  lines:
-  - accounts:
-    - Income
-    description: Consultancy
-    id: consultancy
-    kind: line
-    period: in-year
+  inputs:
+  - consultancy
   period: in-year
 - description: Gross Profit
   id: gross-profit
@@ -91,19 +92,20 @@ computations:
   period: in-year
   segments:
     business-type: company
+- accounts:
+  - Assets:Capital Equipment:Computer Equipment
+  description: Annual investment allowance
+  id: annual-investment-allowance
+  kind: line
+  period: in-year
+  reverse-sign: true
+  segments:
+    business-type: management-expenses
 - description: Allowances
   id: allowances
   kind: group
-  lines:
-  - accounts:
-    - Assets:Capital Equipment:Computer Equipment
-    description: Annual investment allowance
-    id: annual-investment-allowance
-    kind: line
-    period: in-year
-    reverse-sign: true
-    segments:
-      business-type: management-expenses
+  inputs:
+  - annual-investment-allowance
   period: in-year
 - description: Trading Profit
   id: trading-profit
@@ -112,76 +114,84 @@ computations:
   - allowances
   kind: computation
   period: in-year
+- accounts:
+  - Expenses:Emoluments:Employees
+  description: Salaries
+  id: salaries
+  kind: line
+  period: in-year
+  segments:
+    business-type: management-expenses
+- accounts:
+  - Expenses:Emoluments:Employer Pension Contribution
+  description: Pension contributions
+  id: pensions
+  kind: line
+  period: in-year
+  segments:
+    business-type: management-expenses
+- accounts:
+  - Expenses:VAT Purchases:Accountant
+  description: Legal and professional services
+  id: legal-and-professional
+  kind: line
+  period: in-year
+  segments:
+    business-type: management-expenses
+- accounts:
+  - Expenses:VAT Purchases:Bank Charges
+  description: Bank charges
+  id: bank-charges
+  kind: line
+  period: in-year
+  segments:
+    business-type: management-expenses
+- accounts:
+  - Expenses:VAT Purchases:Office
+  - Expenses:VAT Purchases:Telecoms
+  description: Office costs
+  id: office
+  kind: line
+  period: in-year
+  segments:
+    business-type: management-expenses
+- accounts:
+  - Expenses:VAT Purchases:Software
+  description: Software
+  id: software-expenses
+  kind: line
+  period: in-year
+  segments:
+    business-type: management-expenses
+- accounts:
+  - Expenses:VAT Purchases:Subscriptions
+  - Expenses:VAT Purchases:Sundries
+  description: Sundries
+  id: sundries
+  kind: line
+  period: in-year
+  segments:
+    business-type: management-expenses
+- accounts:
+  - Expenses:VAT Purchases:Travel/Accom
+  description: Travel
+  id: travel
+  kind: line
+  period: in-year
+  segments:
+    business-type: management-expenses
 - description: Management Expenses
   id: management-expenses
   kind: group
-  lines:
-  - accounts:
-    - Expenses:Emoluments:Employees
-    description: Salaries
-    id: salaries
-    kind: line
-    period: in-year
-    segments:
-      business-type: management-expenses
-  - accounts:
-    - Expenses:Emoluments:Employer Pension Contribution
-    description: Pension contributions
-    id: pensions
-    kind: line
-    period: in-year
-    segments:
-      business-type: management-expenses
-  - accounts:
-    - Expenses:VAT Purchases:Accountant
-    description: Legal and professional services
-    id: legal-and-professional
-    kind: line
-    period: in-year
-    segments:
-      business-type: management-expenses
-  - accounts:
-    - Expenses:VAT Purchases:Bank Charges
-    description: Bank charges
-    id: bank-charges
-    kind: line
-    period: in-year
-    segments:
-      business-type: management-expenses
-  - accounts:
-    - Expenses:VAT Purchases:Office
-    - Expenses:VAT Purchases:Telecoms
-    description: Office costs
-    id: office
-    kind: line
-    period: in-year
-    segments:
-      business-type: management-expenses
-  - accounts:
-    - Expenses:VAT Purchases:Software
-    description: Software
-    id: software-expenses
-    kind: line
-    period: in-year
-    segments:
-      business-type: management-expenses
-  - accounts:
-    - Expenses:VAT Purchases:Subscriptions
-    - Expenses:VAT Purchases:Sundries
-    description: Sundries
-    id: sundries
-    kind: line
-    period: in-year
-    segments:
-      business-type: management-expenses
-  - accounts:
-    - Expenses:VAT Purchases:Travel/Accom
-    description: Travel
-    id: travel
-    kind: line
-    period: in-year
-    segments:
-      business-type: management-expenses
+  inputs:
+  - salaries
+  - pensions
+  - legal-and-professional
+  - bank-charges
+  - office
+  - software-expenses
+  - sundries
+  - travel
   period: in-year
   segments:
     business-type: management-expenses
@@ -194,17 +204,18 @@ computations:
   period: in-year
   segments:
     business-type: company
+- accounts:
+  - Equity:Corporation Tax
+  description: Other
+  id: corporation-tax
+  kind: line
+  period: in-year
 - id: tax-owed
   description: Corporation tax owed
   kind: group
   hide-breakdown: true
-  lines:
-  - accounts:
-    - Equity:Corporation Tax
-    description: Other
-    id: corporation-tax
-    kind: line
-    period: in-year
+  inputs:
+  - corporation-tax
   period: in-year
 - id: profit-before-tax-fy1
   kind: computation
